YAMLs/gateway_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: development
spec:
  selector:
    app: gateway
  ports:
  - name: gateway
    port: 8080
    targetPort: 8080
    nodePort: 32036
  type: NodePort
