YAMLs/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress-gateway
  annotations:
    kubernetes.io/ingress.class: "public"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - gravitate-health.lst.tfo.upm.es
    secretName: gravitate-cert
  rules:
  - host: gravitate-health.lst.tfo.upm.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
